syntax = "proto3";

import "google/protobuf/timestamp.proto";
option go_package = "github.com/boryashkin/language-api/internal/mediatext/grpc";

service MediaTextService {
  rpc Find (FindMediaTextRequest) returns (FindMediaTextReply) {}
}

message FindMediaTextRequest {
    string rule = 1;
    string source_id = 2;
}

message FindMediaTextReply {
    repeated MediaText texts = 1;
}

message MediaText {
    string id = 1;
    string text = 2;
    map<string, TextPlacement> rule_placements = 3;
    string source_id = 4;
    Media media = 5;
    google.protobuf.Timestamp created_at = 6;
}

message Media {
    string description = 1;
    string type = 2;
    string uri = 3;
    repeated int64 timing = 4;
}

message TextPlacement {
    repeated int64 placement = 1;
}